add secretary argument to both secretary-panel view and edit add functionality when editing or creating meeting, it will update secretary for all decision-activities connected to the meeting add functionality when adding a subcase to a meeting, the meeting.secretary will be set as the subase's decision-activity's secretary

--- a/app/components/mandatees/secretary-panel.hbs
+++ b/app/components/mandatees/secretary-panel.hbs
@@ -4,12 +4,14 @@
       @referenceDate={{@referenceDate}}
       @onCancel={{this.cancelEditing}}
       @onSave={{perform this.save}}
+      @secretary={{@secretary}}
     />
   {{else}}
     <div class="auk-u-mb-3">
       <Mandatees::SecretaryPanel::View
         @showEditButton={{@allowEditing}}
         @onClickEdit={{this.startEditing}}
+        @secretary={{@secretary}}
       />
     </div>
   {{/if}}
