--- a/app/components/mandatees/secretary-panel/view.hbs
+++ b/app/components/mandatees/secretary-panel/view.hbs
@@ -24,7 +24,33 @@
   </Auk::Panel::Header>
   {{#if @secretary}}
     <Auk::Panel::Body @noPadding={{true}}>
-      {{@secretary.fullName}}
+            <table class="auk-table">
+        <thead>
+          <tr>
+            <th>{{t "minister"}}</th>
+          </tr>
+        </thead>
+        <tbody>
+            <tr data-test-mandatee-panel-view-mandatee-row>
+              <td
+                class="auk-table__col--10"
+                data-test-mandatee-panel-view-row-name
+              >
+                <div class="auk-o-flex auk-o-flex--vertical-center">
+                  <AuBadge
+                    @icon="user"
+                    @skin="gray"
+                    @size="small"
+                  />
+                  <span class="auk-u-mx-2">
+                    {{@secretary.fullDisplayName}}
+                  </span>
+                </div>
+              </td>
+            </tr>
+        </tbody>
+      </table>
+      
     </Auk::Panel::Body>
   {{else}}
     <Auk::Panel::Body>
