show mockup sign button in decisions tab

--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -213,7 +213,7 @@
                     {{t "edit"}}
                   </AuButton>
                 {{/if}}
-                {{#if (not @hideSign)}}
+                {{#if @showMockupSign}}
                   <AuButton
                     @skin="link"
                     {{on "click" this.markDocumentForSigning.perform}}
