--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -20,6 +20,7 @@
         @agendaContext={{@agendaContext}}
         @hideNewerVersions={{true}}
         @hideEdit={{true}}
+        @showMockupSign={{true}}
         @hideUpload={{true}}
         @showCreateNewVersion={{true}}
         @onCreateNewVersion={{perform this.onCreateNewVersion}}
