add decision and notes signature section

--- a/app/templates/signatures.hbs
+++ b/app/templates/signatures.hbs
@@ -21,6 +21,12 @@
           <Auk::Tab @route="signatures.ongoing">
             {{t "to-follow-up"}}
           </Auk::Tab>
+          <Auk::Tab @route="signatures.decisions-and-notes">
+            {{t "decisions-and-notes-to-start-up"}}
+          </Auk::Tab>
+          <Auk::Tab @route="signatures.ongoing-decisions-and-notes">
+            {{t "decisions-and-notes-to-follow-up"}}
+          </Auk::Tab>
         </Auk::Tabs>
       </Group.Item>
     </Toolbar.Group>
