--- a/app/templates/settings/index.hbs
+++ b/app/templates/settings/index.hbs
@@ -21,5 +21,15 @@
       </AuLink>
     </div>
   {{/if}}
+  <div class="auk-u-m-2">
+    <AuLink
+      data-test-route-settings-overview-manage-alerts
+      @skin="button-secondary"
+      @icon="pencil"
+      @route="settings.decisions-and-notes-signees"
+    >
+      {{t "manage-decisions-and-notes-signees"}}
+    </AuLink>
+  </div>
 </div>
 {{outlet}}
