--- a/app/templates/signatures/decisions-and-notes.hbs
+++ b/app/templates/signatures/decisions-and-notes.hbs
@@ -178,7 +178,7 @@
               </AuLink>
             </div>
           {{/unless}}
-          {{#if this.decisionActivity}}
+          {{!-- {{#if this.decisionActivity}}
             <Signatures::CreateSignFlow
               @decisionActivities={{array this.decisionActivity}}
               @onChangeSigners={{fn (mut this.signers)}}
@@ -192,7 +192,52 @@
               @onChangeApprovers={{fn (mut this.approvers)}}
               @onChangeNotificationAddresses={{fn (mut this.notificationAddresses)}}
             />
-          {{/if}}
+          {{/if}} --}}
+          <Auk::Panel class="auk-u-mt-2">
+            <Auk::Panel::Header class="auk-u-px-1">
+              <Auk::Toolbar as |Toolbar|>
+                <Toolbar.Group @position="left" as |Group|>
+                  <Group.Item>
+                    <h4 class="auk-h4 auk-u-m-0">
+                      {{t "to-sign-by"}}
+                    </h4>
+                  </Group.Item>
+                </Toolbar.Group>
+                <Toolbar.Group @position="right" as |Group|>
+                  <Group.Item>
+                    <AuButton
+                      @skin="secondary"
+                      @icon="pencil"
+                      @loading={{this.loadSigners.isPending}}
+                      {{on "click" (fn (mut this.showSigneesModal) true)}}
+                    >
+                      {{t "edit-list"}}
+                    </AuButton>
+                  </Group.Item>
+                </Toolbar.Group>
+              </Auk::Toolbar>
+            </Auk::Panel::Header>
+            <Auk::Panel::Body class="auk-u-p-0">
+              <AuList
+                @divider={{true}}
+                as |Item|
+              >
+                <Item
+                  class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center au-u-padding-small"
+                >
+                  Jeroen Overmere
+                  <AuButton
+                    @skin="naked"
+                    @alert={{true}}
+                    @hideText={{true}}
+                    @icon="trash"
+                  >
+                    {{t "delete"}}
+                  </AuButton>
+                </Item>
+              </AuList>
+            </Auk::Panel::Body>
+          </Auk::Panel>
         </div>
         <div class="auk-sidebar__footer">
           <AuToolbar as |Group|>
@@ -200,7 +245,6 @@
               <AuButton
                 data-test-route-signatures-sidebar-start-signflow
                 @loading={{or this.createSignFlow.isRunning this.removeSignFlow.isRunning}}
-                @disabled={{not this.signers.length}}
                 {{on "click" this.createSignFlow.perform}}
               >
                 {{t "start-signing"}}
@@ -268,4 +312,57 @@
       </Auk::Modal::Body>
     </Auk::Modal>
   {{/if}}
+{{/if}}
+
+
+{{#if this.showSigneesModal}}
+  <Auk::Modal @size="medium">
+    <Auk::Modal::Header
+      @title={{t "to-sign-by"}}
+      @onClose={{fn (mut this.showSigneesModal) false}}
+      @closeDisabled={{@loading}}
+    />
+    <Auk::Modal::Body>
+      <div class="au-u-flex au-u-flex--column au-u-flex--spaced-small">
+        <AuCheckbox
+          @checked={{true}}
+        >
+          Jeroen Overmere
+        </AuCheckbox>
+        <AuCheckbox
+          @checked={{false}}
+        >
+          Substituut Vermeire
+        </AuCheckbox>
+        <AuCheckbox
+          @checked={{false}}
+        >
+          Vervanger Van Coillie
+        </AuCheckbox>
+      </div>
+    </Auk::Modal::Body>
+    <Auk::Modal::Footer @custom={{true}}>
+      <Auk::Toolbar @size="large" as |Toolbar|>
+        <Toolbar.Group @position="left" as |Group|>
+          <Group.Item>
+            <AuButton
+              @skin="naked"
+              {{on "click" (fn (mut this.showSigneesModal) false)}}
+            >
+              {{t "cancel"}}
+            </AuButton>
+          </Group.Item>
+        </Toolbar.Group>
+        <Toolbar.Group @position="right" as |Group|>
+          <Group.Item>
+            <AuButton
+              {{on "click" (fn (mut this.showSigneesModal) false)}}
+            >
+              {{t "apply"}}
+            </AuButton>
+          </Group.Item>
+        </Toolbar.Group>
+      </Auk::Toolbar>
+    </Auk::Modal::Footer>
+  </Auk::Modal>
 {{/if}}
