update ember-appuniversum, fix clickable pills

--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -117,6 +117,7 @@
             {{#if this.piece.publicationFlow}}
               <AuPill
                 @size="small"
+                @skin="link"
                 @route="publications.publication"
                 @model={{this.piece.publicationFlow.id}}
                 data-test-document-card-publication-link
