--- a/app/components/subcases/subcases-overview-header.hbs
+++ b/app/components/subcases/subcases-overview-header.hbs
@@ -38,6 +38,7 @@
               {{#each this.publicationFlows as |publicationFlow|}}
                 <AuPill
                   @size="small"
+                  @skin="link"
                   @route="publications.publication"
                   @model={{publicationFlow.id}}
                 >
