--- a/app/components/mandatees/secretary-panel/view.hbs
+++ b/app/components/mandatees/secretary-panel/view.hbs
@@ -24,39 +24,28 @@
   </Auk::Panel::Header>
   {{#if @secretary}}
     <Auk::Panel::Body @noPadding={{true}}>
-            <table class="auk-table">
-        <thead>
-          <tr>
-            <th>{{t "minister"}}</th>
-          </tr>
-        </thead>
+      <table class="auk-table">
         <tbody>
-            <tr data-test-mandatee-panel-view-mandatee-row>
-              <td
-                class="auk-table__col--10"
-                data-test-mandatee-panel-view-row-name
-              >
-                <div class="auk-o-flex auk-o-flex--vertical-center">
-                  <AuBadge
-                    @icon="user"
-                    @skin="gray"
-                    @size="small"
-                  />
-                  <span class="auk-u-mx-2">
-                    {{@secretary.fullDisplayName}}
-                  </span>
-                </div>
-              </td>
-            </tr>
+          <tr data-test-mandatee-panel-view-mandatee-row>
+            <td
+              class="auk-table__col--10"
+              data-test-mandatee-panel-view-row-name
+            >
+              <div class="auk-o-flex auk-o-flex--vertical-center">
+                <AuBadge @icon="user" @skin="gray" @size="small" />
+                <span class="auk-u-mx-2">
+                  {{@secretary.fullDisplayName}}
+                </span>
+              </div>
+            </td>
+          </tr>
         </tbody>
       </table>
-      
+
     </Auk::Panel::Body>
   {{else}}
     <Auk::Panel::Body>
-      <Auk::EmptyState
-        @message={{t "no-secretary-assigned"}}
-      />
+      <Auk::EmptyState @message={{t "no-secretary-assigned"}} />
     </Auk::Panel::Body>
   {{/if}}
 </Auk::Panel>
