--- a/app/templates/signatures.hbs
+++ b/app/templates/signatures.hbs
@@ -21,6 +21,9 @@
           <Auk::Tab @route="signatures.ongoing">
             {{t "to-follow-up"}}
           </Auk::Tab>
+          <Auk::Tab @route="signatures.decisions">
+            {{t "decisions-and-minutes"}}
+          </Auk::Tab>
         </Auk::Tabs>
       </Group.Item>
     </Toolbar.Group>
