KAS-4215 minor changes

--- a/app/components/signature-pill.hbs
+++ b/app/components/signature-pill.hbs
@@ -1,4 +1,4 @@
-{{#if (or this.data.isRunning)}}
+{{#if this.data.isRunning}}
   <div class="auk-loader" role="alert" aria-busy="true"></div>
 {{else}}
   {{#if this.data.value.signingHubUrl}}
