--- a/app/templates/signatures/index.hbs
+++ b/app/templates/signatures/index.hbs
@@ -263,7 +263,7 @@
         <Auk::Loader @message={{concat
                                 (t "creating-sign-flows-message")
                                 " "
-                                (t "please-be-patient")}}
+                                (t "thanks-for-your-patience")}}
         />
       </Auk::Modal::Body>
     </Auk::Modal>
