--- a/app/styles/au/_au-components.scss
+++ b/app/styles/au/_au-components.scss
@@ -34,6 +34,7 @@ $au-button-height: 3.4rem;
 @import 'ember-appuniversum/c-help-text';
 @import 'ember-appuniversum/c-hr';
 @import 'ember-appuniversum/c-fieldset';
+@import 'ember-appuniversum/c-form';
 @import 'ember-appuniversum/c-icon';
 @import 'ember-appuniversum/c-input';
 @import "ember-appuniversum/c-label";
