--- a/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-edit.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-edit.hbs
@@ -1,9 +1,9 @@
 <div class="auk-u-mb-8">
   <Auk::Panel class="auk-panel--editing">
     <Auk::Panel::Body>
-      <div class="auk-u-mb-4">
+      <div class="au-c-form">
         {{#if @subcase}}
-          <div class="auk-form-group">
+          <AuFormRow>
             <Auk::Label for="subcase-confidential">{{t "limited-access"}}</Auk::Label>
             <AuToggleSwitch
               data-test-agendaitem-titles-edit-confidential={{true}}
@@ -11,9 +11,9 @@
               id="subcase-confidential"
               @onChange={{set this "confidentialChanged" true}}
             />
-          </div>
+          </AuFormRow>
         {{/if}}
-        <div class="auk-form-group">
+        <AuFormRow>
           <Auk::Label id="name-subcase">{{t "name-subcase"}}</Auk::Label>
           <Textarea
             data-test-agendaitem-titles-edit-shorttitle={{true}}
@@ -22,10 +22,8 @@
             class="auk-textarea"
             @value={{@agendaitem.shortTitle}}
           />
-        </div>
-      </div>
-      <div class="auk-u-mb-4">
-        <div class="auk-form-group">
+        </AuFormRow>
+        <AuFormRow>
           <Auk::Label id="title-subcase">{{t "title-subcase"}}</Auk::Label>
           <Textarea
             data-test-agendaitem-titles-edit-title={{true}}
@@ -34,10 +32,8 @@
             class="auk-textarea"
             @value={{@agendaitem.title}}
           />
-        </div>
-      </div>
-      <div class="auk-u-mb-4">
-        <div class="auk-form-group">
+        </AuFormRow>
+        <AuFormRow>
           <Auk::Label id="comment-title">{{t "comment-title"}}</Auk::Label>
           <Textarea
             data-test-agendaitem-titles-edit-comment={{true}}
@@ -46,10 +42,8 @@
             class="auk-textarea"
             @value={{@agendaitem.comment}}
           />
-        </div>
-      </div>
-      <div class="auk-u-mb-4">
-        <div class="auk-form-group">
+        </AuFormRow>
+        <AuFormRow>
           <Auk::Label id="private-comment-title">
             <Auk::Icon @name="lock-closed" @size="small" />
             {{t "private-comment-title"}}
@@ -61,11 +55,9 @@
             class="auk-textarea"
             @value={{@agendaitem.privateComment}}
           />
-        </div>
-      </div>
-      {{#if (is-announcement @agendaitem.type)}}
-        <div class="auk-u-mb-4">
-          <div class="auk-form-group">
+        </AuFormRow>
+        {{#if (is-announcement @agendaitem.type)}}
+          <AuFormRow>
             <Auk::Label for="item-show-in-newsletter">
               {{t "on-the-website"}}
             </Auk::Label>
@@ -78,9 +70,9 @@
             {{else}}
               {{t "no-news-item"}}
             {{/if}}
-          </div>
-        </div>
-      {{/if}}
+          </AuFormRow>
+        {{/if}}
+      </div>
     </Auk::Panel::Body>
     <Auk::Panel::Footer>
       <Auk::Toolbar>
