--- a/app/components/cases/edit-case.hbs
+++ b/app/components/cases/edit-case.hbs
@@ -4,9 +4,11 @@
     @onClose={{this.close}}
   />
   <Auk::Modal::Body>
-    <div class="auk-form-group ">
-      <Auk::Label>{{t "short-title-case"}}</Auk::Label>
-      <Auk::Textarea @rows="2" @value={{mut this.shortTitle}} />
+    <div class="au-c-form">
+      <AuFormRow>
+        <Auk::Label>{{t "short-title-case"}}</Auk::Label>
+        <Auk::Textarea @rows="2" @value={{mut this.shortTitle}} />
+      </AuFormRow>
     </div>
   </Auk::Modal::Body>
   <Auk::Modal::Footer
